2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/assert-4.pk: Update to new assertion
	exception fields.
	* testsuite/poke.pkl/assert-diag-1.pk: Likewise.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Use
	`location' and `msg' fields of Exception.
	* testsuite/poke.map/maps-structs-constraints-2.pk: Update
	accordingly.
	* testsuite/poke.pkl/scons-constraints-2.pk: Likewise.
	* testsuite/poke.pkl/scons-constraints-1.pk: Likewise.
	* testsuite/poke.map/maps-structs-constraints-3.pk: Likewise.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt-2.pk (_pkl_assert): Use the `location' and `msg'
	fields of Exception.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_make_exception): Likewise.
	* libpoke/pkl-asm.c (pkl_asm_new): Adapt caller accordingly.
	* libpoke/pvm.jitter (PVM_RAISE): Likewise.
	* libpoke/pkl-gen.c: Likewise.
	* libpoke/ras: Likewise.
	* libpoke/pkl-rt-1.pk (Exception): New fields `location' and
	`msg'.
	(_pkl_exception_handler): Handle `location' and `msg'.

2021-11-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/poke.pkl/format-21.pk: Replace `Exception` with locally
	defined type `E`.
	* testsuite/poke.pkl/format-22.pk: Likewise.
	* testsuite/poke.pkl/format-23.pk: Likewise.
	* testsuite/poke.pkl/format-24.pk: Likewise.
	* testsuite/poke.pkl/format-25.pk: Likewise.
	* testsuite/poke.pkl/format-26.pk: Likewise.
	* testsuite/poke.pkl/format-27.pk: Likewise.
	* testsuite/poke.pkl/format-28.pk: Likewise.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt-1.pk (Exception): Rename field `msg' to `name'.
	(_pkl_exception_handler): Update accordingly.
	* libpoke/pkl-rt-2.pk (_pkl_assert): Likewise.
	* libpoke/pvm-val.c (pvm_make_exception): Likewise.
	* libpoke/pvm.h (PVM_E_*_NAME): Rename from PVM_E_*_MSG.
	* libpoke/ras: Use PVM_E_*_NAME instead of PVM_E_*_MSG.